chore: 增加忽略文件、增加build构建文件

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,13 @@
 [project]
-name = "makelog2compilecommands"
+name = "buildLog2CompileCommands"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "auto-py-to-exe>=2.46.0",
+]
+
+[[tool.uv.index]]
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+default = true
